--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/compiler-cli": "^2.4.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
+    "angular2-template-loader": "^0.6.2",
     "codelyzer": "~2.0.0",
     "electron": "^1.6.2",
     "jasmine-core": "~2.5.2",
